--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=EmployeeBoosManagement
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/yyy
+spring.datasource.url=jdbc:mysql://localhost:3306/employeeboss
 spring.datasource.username = root
 spring.datasource.password = Ritik@2002
 
